[package]
name = "jsonc-to-json"
version = "0.1.1"
edition = "2021"
description = "Simple library for converting JSONC into JSON"
documentation = "https://docs.rs/git-commits"
keywords = ["json", "jsonc", "deserialization"]
categories = ["encoding", "parser-implementations"]
repository = "https://github.com/vallentin/jsonc-to-json"
license = "MIT"
readme = "README.md"

[dependencies]
any-lexer = "0.0.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
